--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 <!-- Feel free to change this text here -->
 <p>
   Fork me? Fork you, @octocat!
+  <p>
+  This is Oppenheip's experiment. No hype!
+</p>
 </p>
 
 </body>
